fix bug where image was floating on top of text on smaller panels

--- a/_sass/_components.scss
+++ b/_sass/_components.scss
@@ -125,14 +125,14 @@
 
 // Photo in About page
 .me {
-  width: 10.5rem;
+  width: 12em;
   //border-radius: 100%;
   position: relative;
 }
-@media (max-width: 50em) {
+@media (max-width: 20em) {
   .me {
-    width: 6.5rem;
-    margin-top: -4.8rem;
+    width: 11.5rem;
+    margin-top: 3.2rem;
   }
 }
 
